<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:id="@+id/llWidgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblImgType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_image_type_label" />

            <Spinner
                android:id="@+id/spnImageType"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/imgType_array" />
        </LinearLayout>

        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblImgSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_image_size_label" />

            <Spinner
                android:id="@+id/spnImageSize"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/imgSize_array" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblImgColorFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_image_color_filter_label" />

            <Spinner
                android:id="@+id/spnImageColorFilter"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/imgColorFilter_array" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="vertical" >

		    <EditText
		        android:id="@+id/etEditSite"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/settings_image_site_hint"
		        android:inputType="textWebEditText" />

        </LinearLayout>
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btnSaveFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llWidgets"
        android:layout_centerHorizontal="true"
        android:onClick="onSavedFilters"
        android:text="@string/save_button_label" />

            
</RelativeLayout>
