<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filters"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/purple_alpha" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
        	android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblImgType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/spnImageType"
                android:text="@string/settings_image_type_label" />

            <Spinner
                android:id="@+id/spnImageType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"                
                android:gravity="center"
                android:entries="@array/imgType_array" />
        </RelativeLayout>

        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
        	android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblImgSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/spnImageSize"
                android:text="@string/settings_image_size_label" />

            <Spinner
                android:id="@+id/spnImageSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"                
                android:gravity="center"
                android:entries="@array/imgSize_array" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
        	android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblImgColorFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/spnImageColorFilter"
                android:text="@string/settings_image_color_filter_label" />

            <Spinner
                android:id="@+id/spnImageColorFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"                
                android:gravity="center"
                android:entries="@array/imgColorFilter_array" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"            
        	android:orientation="vertical" >

		    <EditText
		        android:id="@+id/etEditSite"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/settings_image_site_hint"
		        android:inputType="textWebEditText" />

            
		    <Button
		        android:id="@+id/btnSaveFilters"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/etEditSite"
		        android:layout_centerHorizontal="true"
		        android:onClick="onSavedFilters"
		        android:gravity="center"
		        android:text="@string/save_button_label" />
		   
        </RelativeLayout>
        	
    

</LinearLayout>
